feat: 增加异步告警通知支持邮件渠道及事件驱动架构
- 告警通知器改为基于Spring事件异步发布和消费
- 新增邮件告警支持，支持多收件人和HTML格式
- 新增告警事件及事件监听器，使用专属线程池异步发送
- 配置文件新增邮件SMTP相关配置
- 新增业务工具查询门面BusinessRepository，封装订单、账户、天气缓存查询逻辑
- 新增知识库聚合查询门面KnowledgeBaseRepository，封装跨表复合查询和级联删除
- 新增RAG评估控制器，提供单条和批量评估接口
- 优化Elasticsearch索引创建配置字符串拼接方式
- 新增告警专用线程池配置，防止告警发送阻塞业务线程